dnl Process this file with autoconf to produce a configure script.
AC_INIT(ezFCPlib/fcpOpenKey.c)

dnl The next line must also be updated in ezFCPlib.h
AM_INIT_AUTOMAKE(fcptools, "0.4.8")

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_LIBTOOL

INCLUDES="$INCLUDES -I${includedir}"
LIBS="$LIBS -L${libdir}"

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT

AC_CHECK_HEADERS([alloca.h arpa/inet.h fcntl.h netdb.h sys/ioctl.h sys/param.h sys/socket.h sys/timeb.h])

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM

dnl Checks for library functions. -----------------------------------------

AC_CHECK_LIB(pthread, pthread_create, LIBS="$LIBS -lpthread")
AC_CHECK_LIB(c_r, pthread_create, LDFLAGS="$LDFLAGS -pthread -D_THREAD_SAFE")

AC_CHECK_FUNC(gethostbyname,,[AC_CHECK_LIB(nsl,gethostbyname)])
AC_CHECK_FUNC(setsockopt,,[AC_CHECK_LIB(socket,setsockopt)])

AC_CHECK_FUNCS([bzero gethostbyaddr inet_ntoa memset re_comp regcomp select socket strcasecmp strerror strpbrk strtol])

dnl -----------------------------------------------------------------------

AC_SUBST(INCLUDES)
AC_SUBST(LIBS)
AC_SUBST(LDADD)

AC_OUTPUT(Makefile fcpcommon/Makefile ezFCPlib/Makefile fcpput/Makefile fcpget/Makefile fcpputsite/Makefile fcpputsplit/Makefile)
